[tool.poetry]
name = "selenium_crawler"
version = "0.1.0"
description = "Crawler based on selenium"
authors = ["Rikov Andrey <rikov.andrey@gmail.com>"]

[tool.poetry.dependencies]
fake-useragent = "^1.3.0"
python = "^3.11"
selenium = "^4.15.2"
pymongo = "^4.5.0"

[tool.isort]
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
profile = "black"

[tool.black]
line-length = 88
include = '\.pyi?$'